--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = Global21cmLSTM
 version = 1.0.0
 description = 21cmLSTM: A Fast Memory-based Emulator of the Global 21 cm Signal with Unprecedented Accuracy
-long_description = file: README.rst
+long_description = file: README.md
 author = Johnny Dorigo Jones
 author_email = johnny.dorigojones@colorado.edu
 license = MIT
@@ -27,4 +27,4 @@ install_requires =
     tensorflow
 
 [options.package_data]
-* = *.rst, Global21cmLSTM/dataset_21cmGEM.h5, Global21cmLSTM/dataset_ARES.h5, Global21cmLSTM/models*
+* = *.md, Global21cmLSTM/dataset_21cmGEM.h5, Global21cmLSTM/dataset_ARES.h5, Global21cmLSTM/models*
